interfaz reclamaciones terminada

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,8 @@
             </div>
             {% endif %}
         {% endblock %}
-        {% block body %}{% endblock %}
+        {% block body %}
+        {% endblock %}
         {% block javascripts %}
 
         {% endblock %}
