--- a/templates/reclamacion/index.html.twig
+++ b/templates/reclamacion/index.html.twig
@@ -28,25 +28,10 @@
                     </div>
                     <div class="x_content">
                         <div class="row">
-                            {#							<form action="{{ path('app_admin_groupaction_user') }}" id="grpaction" method="post" name="grpaction">#}
-                            {#								<div class="form-group form-inline">#}
-                            {#									<select class="form-control" name="action" required id="action_select">#}
-                            {#										<option value="">#}
-                            {#											ACCIONES</option>#}
-                            {#										<option value="{{"backend.user.deactivate"|trans }}">#}
-                            {#											Deshabilitar</option>#}
-                            {#										<option value="{{"backend.user.Activate"|trans }}">#}
-                            {#											Habilitar</option>#}
-                            {#										<option value="{{"backend.user.delete"|trans }}">#}
-                            {#											Eliminar</option>#}
-                            {#									</select>#}
-                            {#									<button class="btn btn-primary" type="submit">Ejecutar</button>#}
-                            {#								</div>#}
 
-                            {#							</form>#}
                             <table id="listaReclamaciones" class="display table table-striped table-bordered dataminetables">
                                 <thead>
-                                <th><input type="checkbox" id="select_all" name="select_all"></th>
+                                <th>N°</th>
                                     <th>Fecha</th>
                                     <th>Nombres</th>
                                     <th>Apellido_paterno</th>
@@ -60,10 +45,9 @@
                                     <th>actions</th>
                                 </thead>
                                 <tbody>
-{#                                {% for user in users|filter(user => not user.deleted)  %}#}
                                 {% for reclamacion in reclamacions %}
                                     <tr>
-                                        <td><input type="checkbox" class="chkgrp" name="chkgrp[]" value="{{ reclamacion.id }}"></td>
+                                        <td>{{ loop.index }}</td>
                                         <td>{{ reclamacion.fecha ? reclamacion.fecha|date('Y-m-d H:i:s') : '' }}</td>
                                         <td>{{ reclamacion.nombres }}</td>
                                         <td>{{ reclamacion.apellidoPaterno }}</td>
@@ -111,44 +95,6 @@
 {% block javascripts_footer %}
     {{ parent() }}
     <script>
-
-
-
-        $(document).on("click",".activate-link",function (e) {
-            /*$(".activate-link").click(function(e) {*/
-            e.preventDefault();
-            var btn = $(this);
-            var link = $(this).attr("href");
-            $.ajax({
-                url: link,
-                method: 'POST',
-                success: function(data){
-                    if(data.message=="success"){
-                        if(data.value==true){
-                            btn.removeClass("btn-success");
-                            btn.removeClass("btn-warning");
-                            btn.addClass("btn-success");
-                            btn.html("<i class=\"fa fa-check\"></i>");
-                            notif("success","Estado:","Activado");
-                        }else if(data.value==false) {
-                            btn.removeClass("btn-success");
-                            btn.removeClass("btn-warning");
-                            btn.addClass("btn-warning");
-                            btn.html("<i class=\"fa fa-times\"></i>");
-                            notif("warning","Estado:","Desactivado");
-                        }
-
-
-                    }else {
-                        notif("error","Error","Error interno del servidor.");
-                    }
-                },
-                error: function(xhr){
-                    notif("error","Error","Ha ocurrido un error inesperado.");
-                }
-            });
-        });
-
 
     </script>
 
