generacion de pdf terminado

--- a/templates/Default/layout.html.twig
+++ b/templates/Default/layout.html.twig
@@ -112,7 +112,7 @@
         </div>
     </div>
     <footer>
-        <div class="pull-right">
+        <div class="pull-right no-print" >
             Desarrollado por <a href="https://web.facebook.com/DatatecSolutionsPeru">DatatecSolutions</a>
         </div>
         <div class="clearfix"></div>
