--- a/templates/Default/index.html.twig
+++ b/templates/Default/index.html.twig
@@ -74,7 +74,7 @@
                 <div class="ln_solid"></div>
                 <div class="item form-group" style="float: right">
                     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                        <a class="btn btn-danger" href="{{ sistema.link | default("#") | upper }}"><i class="fa fa-arrow-left"></i> REGRESAR</a>
+                        <a class="btn btn-danger" href="{{ sistema.link | default("http://icit.edu.pe") | upper }}"><i class="fa fa-arrow-left"></i> REGRESAR</a>
                     </div>
                 </div>
                 {{ form_end(form) }}
